# ChangeLog for dev-vcs/rapidsvn
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.7 2012/03/17 18:07:10 armin76 Exp $

  17 Mar 2012; Raúl Porcel <armin76@gentoo.org> rapidsvn-0.9.6-r1.ebuild,
  rapidsvn-0.12.0.ebuild:
  Drop sparc keywords

  06 Feb 2012; Justin Lecher <jlec@gentoo.org> rapidsvn-0.12.0.ebuild:
  Remove forced webdav dependency in subversion, reported by Denis Scherbakov

  31 Jan 2012; Justin Lecher <jlec@gentoo.org> -rapidsvn-0.9.8.ebuild,
  -rapidsvn-0.10.0.ebuild, rapidsvn-0.12.0.ebuild, metadata.xml:
  Added myself as maintainer, upgraded to EAPI=4 to drop built_with_use
  (#305365), thanks agostino for the patch #390469; dropped old

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> rapidsvn-0.12.0.ebuild:
  Stable on amd64 wrt bug #377737

  20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> rapidsvn-0.12.0.ebuild:
  ppc/ppc64 stable wrt #377737

  17 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> rapidsvn-0.12.0.ebuild:
  x86 stable wrt bug #377737

  10 Feb 2011; Ulrich Mueller <ulm@gentoo.org> +rapidsvn-0.9.6-r1.ebuild,
  +rapidsvn-0.9.8.ebuild, +files/rapidsvn-0.9.8-sar.patch,
  +rapidsvn-0.10.0.ebuild, +rapidsvn-0.12.0.ebuild, +files/rapidsvn-sar.patch,
  +files/rapidsvn-svncpp_link.patch, +metadata.xml:
  Move package from dev-util to dev-vcs, bug 56967.

  04 Sep 2010; Ryan Hill <dirtyepic@gentoo.org> -rapidsvn-0.9.3.ebuild,
  -rapidsvn-0.9.4.ebuild:
  Drop old versions depending on wxGTK-2.6.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rapidsvn-0.9.3.ebuild, rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6-r1.ebuild:
  net-misc/neon renamed to net-libs/neon.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rapidsvn-0.9.3.ebuild, rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6-r1.ebuild,
  rapidsvn-0.9.8.ebuild, rapidsvn-0.10.0.ebuild, rapidsvn-0.12.0.ebuild: