@@ -1,19 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX rapidsvn-0.9.8-sar.patch 955 RMD160 872c2307abee59bc2b2d63866b8d72ec81600e08 SHA1 0682da8f3dcd41019c780f749b1087ba22793311 SHA256 485eca96c9d393baffec28443eb7f32fe577d9a12533c0797ca61f67380c4b0e
 AUX rapidsvn-sar.patch 931 RMD160 ba28d6ccfd86553b4963d611593812db6005ae4c SHA1 175d1609f2e9cfb7f0f6e832ee168869760b442e SHA256 0690d1c3c516e32138225ca60c74a157632eab7358f5d8cbdd374f7b5d1c5782
 AUX rapidsvn-svncpp_link.patch 304 RMD160 3d2b6f48e46e3c5e39a499589043aa09de60d8c6 SHA1 9752592941c10d71f94680ff97e925fee66bc890 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968
 DIST rapidsvn-0.12.0-1.tar.gz 1246675 RMD160 2c6e28f5b3a6450cfb8a749fc27490877ccdfa40 SHA1 b25820ee98517b2b070c9b5a3a18463607799081 SHA256 ef7d0db528ba5c660f8e8ce4dd7b6d098707b43b04932257e092a6d4ab746ac4
-DIST rapidsvn-0.9.6.tar.gz 1205771 RMD160 060a66d3f268f9a4018f01a9541df2a3394ed7b8 SHA1 266f846437e3bbce1707799ec0d95c2d1be43b4a SHA256 4e026b0e7a56b2a0ba4cd12b1ee224c8d0645e98eb5b682078220f912513b36d
-EBUILD rapidsvn-0.12.0.ebuild 2110 RMD160 0990114b965acf6df707da893c210502ae785b56 SHA1 96835354a6532526146f98d68dc842b4800d5cb8 SHA256 881dcc6c2107d7e81ff736359181282fd30390a04fafe6f7da0c8b060f7a4d6b
-EBUILD rapidsvn-0.9.6-r1.ebuild 3164 RMD160 6592239ddb32ae588bcfdc676e71d22fbf538a76 SHA1 f7f319979faeec6759b345d3e79fdd6990695b50 SHA256 045e322f3420a2647025f4febd77817625b57e6eb89fc2e49cbad3e532c5a346
-MISC ChangeLog 13383 RMD160 618642ccfab26a8d45ebc2f1bb890c8a9ccd3ca8 SHA1 e138e67c2d39d77436281caa55ab042e76979e42 SHA256 73773b3434b047c265161276bec60e1d487ca73e3bb21594518602d9e4175418
+EBUILD rapidsvn-0.12.0.ebuild 2112 RMD160 2bde01844e268edec48e1f5ca1814c479664eeff SHA1 6b5ce5516a49f2cefcd0a679a06025c3dde840f7 SHA256 e48962d9998244b9e0c7dc77c408e8ada118bbf940cbfa5e9b8b359be6290bb7
+MISC ChangeLog 13519 RMD160 e7fa7e669dedbf73a0fba9bf2d8d07edb732527e SHA1 b5de498cf1e109a195d6a2af6283037c67f19705 SHA256 5cb61e6d2bfb023e2c9704dd8a6e0e884302471d84be93368e1e61a8cac389ac
 MISC metadata.xml 613 RMD160 5bca2af37b01e39c021353be496523039f06e57a SHA1 3df23374b306edb2b6ec56c5299af42f0507ec5f SHA256 9f428d703ffd0b092ee13aa5619c2bbc70271da01a9f15cd578feb5a13d02213
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk9k0tUACgkQuQc30/atMkCbeACeIhbiYQFg1l2nfseAWXX7N0Mf
-xrkAn3BQ1h9s6UC07c+1e4/iuuzFBmnJ
-=7rRo
+iEYEAREKAAYFAk9k6S0ACgkQgAnW8HDreRbqhQCgxWjvxaAipgZgZoDqM1zCj9sZ
+nTsAn1qjTZbnUX4FpnPThOSlbEY6YYPL
+=QWab
 -----END PGP SIGNATURE-----
