@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/rapidsvn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.7 2012/03/17 18:07:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.8 2012/03/17 19:42:32 jlec Exp $
+
+  17 Mar 2012; Justin Lecher <jlec@gentoo.org> -rapidsvn-0.9.6-r1.ebuild,
+  rapidsvn-0.12.0.ebuild:
+  Dropped old, fixes #313713 & 305365
 
   17 Mar 2012; Raúl Porcel <armin76@gentoo.org> rapidsvn-0.9.6-r1.ebuild,
   rapidsvn-0.12.0.ebuild:
